--- a/weather trends.ipynb
+++ b/weather trends.ipynb
@@ -278,7 +278,7 @@
         }
       ],
       "source": [
-        "!ngrok config add-authtoken 2oPx4fOcyHF94uqEy3rjm8uP1k0_2FMnWmtSgTz8jt6nkdEkt"
+        "!ngrok config add-authtoken YOUR_AUTH_TOKEN"
       ]
     },
     {
